mediumArticle/manifestapp/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: canary-demo
    rollouts-pod-template-hash: 57dcc97cc5
  name: canary-demo-57dcc97cc5-5xsfb
spec:
  containers:
  - image: gcr.io/google-samples/hello-app:1.0
    imagePullPolicy: Always
    name: canary-demo
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
