mediumArticle/manifestapp/svc.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: canary-demo
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    selector:
      app: canary-demo
    sessionAffinity: None
    type: ClusterIP
