mediumArticle/manifestapp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubecost-cost-analyzer
  namespace: medium
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /oauth2
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/proxy-body-size: "2000m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    meta.helm.sh/release-name: medium
    meta.helm.sh/release-namespace: medium
    nginx.ingress.kubernetes.io/auth-url: "http://medium-demo.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://medium-demo.com/oauth2/start?rd=https://medium-demo.com/oauth2/callback"
  labels:
    app: cost-analyzer
    app.kubernetes.io/instance: kubecost
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cost-analyzer
spec:
  ingressClassName: nginx
   #tls:
   #- hosts:
   # - kubecost-kris.unicorndomain.com
   # secretName: kubecost-cost-analyzer-tls-cert
  rules:
  - host: medium-demo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canary-demo
            port:
              number: 80
